# backend_training_aug_2021

./: Dockerfile  README.MD  cloudbuild.yaml  pycheck  pyproject.toml  setup.py  skaffold.yaml
skaffold/: manifest.yaml
src/appbar/: cli.py  views.py  web.py
src/appbaz/: cli.py  views.py  web.py
src/appfoo/: cli.py  views.py  web.py
src/appfoo/cronjob/: send_sms.py
src/appfoo/subscriber/: __init__.py  __main__.py  update_name.py
src/appfoo/worker/: __init__.py  __main__.py  sync_foo.py
src/libbar/: __init__.py  context.py
src/libbar/domain/: __init__.py  pastebin.py
src/libbar/models/: tables.py
src/libbaz/: __init__.py  context.py
src/libbaz/domain/: counter.py
src/libbaz/models/: tables.py
src/libfoo/: __init__.py  context.py  messages.py
src/libfoo/domain/: __init__.py  keyval.py
src/libfoo/models/: tables.py
src/libutil/: __init__.py  util.py
tests/: conftest.py  load_fixtures.py
tests/bar/: conftest.py  test_pastebin.py
tests/baz/: conftest.py  test_counter.py
tests/foo/: conftest.py  test_domain.py  test_views.py
tests/foo/data/: fixtures.toml
