[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
gunicorn = "^20.0.4"
sqlalchemy = "1.2.0"
mysqlclient = {url = "https://storage.googleapis.com/noon-toolbox/2018/build-python/mysqlclient-1.3.13-cp37-cp37m-linux_x86_64.whl"}
noonhelpers = {url = "https://storage.googleapis.com/noon-toolbox/2019/python-noonhelpers/noonhelpers-master.tar.gz?cb=5"}
noonutil = {url = "https://storage.googleapis.com/noon-toolbox/2020/python-noonutil/noonutil-v179.2-test.tar.gz"}
requests = "^2.23.0"
sentry-sdk = "0.14.0"
jsql = "0.6"
google-api-core = "1.16.0"
grpcio-gcp = "0.2.2"
py-spy = "0.1.8"
pylint = "2.3.1"
retrying = "1.3.3"
boltons = "18.0.1"
pytest = "^5.4.1"
toml = "0.10.0"
pyhumps = "^1.3.1"
async-timeout = "^3.0.1"
# to  be removed later some how
jinja2 = "^2.11.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry>=1.0.3"]
build-backend = "poetry.masonry.api"

